<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart-clinic-admin</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="patients">Patients</string>
    <string name="profession">profession</string>
    <string name="bio">Bio</string>
    <string name="smart_clinic">SMART CLINIC</string>
    <string name="doctors">DOCTORS</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="appointments">Appointments</string>
    <string name="summary">Summary</string>
    <string name="request">Request</string>
    <string name="admin">ADMIN</string>
    <string name="empty">Empty</string>
    <string name="male">Male</string>
    <string name="_24">24</string>
    <string name="occupation">occupation</string>
    <string name="phone_number">Phone number</string>
    <string name="prompt_email">email</string>
    <string name="home_address">address</string>
    <string name="profileImage">image</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="nrc">NRC</string>
    <string name="uid">UID</string>
    <string name="sex">Sex</string>
    <string name="dob">DOB</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="first_name">First name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="verified">verified</string>
    <string name="address">Address</string>
    <string name="update">update</string>
    <string name="edit">Edit</string>
    <string name="approve">Approve</string>
    <string name="delete">Delete</string>

</resources>
