<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    app:layoutDescription="@xml/fragment_home_scene"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="2">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/CV_doctor"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:focusable="true"
            app:cardCornerRadius="8dp"
            app:layout_column="0"
            app:layout_row="0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewDoctor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/doctors"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewDoctors"
                    app:layout_constraintStart_toStartOf="@+id/imageViewDoctors"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewDoctors" />

                <ImageView
                    android:id="@+id/imageViewDoctors"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/doctors"
                    android:src="@drawable/ic_doctor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/CV_patient"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="8dp"
            app:layout_column="1"
            app:layout_row="0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPatient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/patients"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewPatient"
                    app:layout_constraintStart_toStartOf="@+id/imageViewPatient"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewPatient" />

                <ImageView
                    android:id="@+id/imageViewPatient"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/doctors"
                    android:src="@drawable/ic_patient"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:layout_column="0"
            app:layout_row="1"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewRequests"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/request"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewRequest"
                    app:layout_constraintStart_toStartOf="@+id/imageViewRequest"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewRequest" />

                <ImageView
                    android:id="@+id/imageViewRequest"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/doctors"
                    android:src="@drawable/ic_mail"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="8dp"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:layout_column="1"
            app:layout_row="1"
            tools:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewPatients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/summary"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewSummary" />

                <ImageView
                    android:id="@+id/imageViewSummary"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/doctors"
                    android:src="@drawable/ic_report"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@color/primaryTextColor"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.motion.widget.MotionLayout>





